[package]
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
description = "IMAP client for Rust"
documentation = "http://mattnenterprise.github.io/rust-imap"
homepage = "https://github.com/mattnenterprise/rust-imap"
keywords = ["imap"]
license = "Apache-2.0/MIT"
name = "imap"
readme = "README.md"
repository = "https://github.com/mattnenterprise/rust-imap"
version = "0.0.6"

[dependencies]
openssl = "0.9.1"
regex = "0.1.80"

[dev-dependencies]
base64 = "0.2.1"

[lib]
name = "imap"
path = "src/lib.rs"
